--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "token": "",
+    "token": "OTIzOTEzMjcwMjkxNzM0NTgw.YcW7SQ.JDfd7N2rn0Zgk8hzLxPCR7GZhds",
         "GOOGLE_API_KEY": "",
     "owner": {
-        "id": ""
+        "id": "796730877707026434"
     },
-    "support": ""
+    "support": "https://discord.gg/JTvqkhGD"
 }
